--- a/Account Page.html
+++ b/Account Page.html
@@ -5,34 +5,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Utilty_Consumption</title>
+    <link rel="stylesheet" href="Account Page.css">
 </head>
 
 <body>
-    <button>Sign out</button>
-    <h1>Account Page</h1>
+    <form action="Home Page.HTML">
+        <div class="movesign">
+            <button id="signout">Sign Out</button>
+        </div>
+    </form>
 
     <p>
+    <h1>Account Page</h1>
     <h2>User Specifications</h2>
-    <table>
+    </p>
+
+    <p id="table">
+    <table class="specifications">
         <thead>
             <TR>
                 <th>Country</th>
                 <th>Electrical Supply</th>
-
             </TR>
+
         </thead>
+        <tbody>
+            <tr>
+                <th>-</th>
+                <th>-</th>
+            </tr>
+        </tbody>
+        <div class="changespecs">
+            <button>Change Specifications</button>
+        </div>
+
     </table>
+
+
     </p>
+
+    <h3>Previous Estimates</h3>
 
     <p>
-    <h3>Previous Estimates</h3>
-    </p>
+    <table class="previousestimates">
+        <thead>
+            <TR>
+                <th>Date</th>
+                <th>Quote Number</th>
+                <th>Order Number</th>
+                <th>Estimate</th>
+            </TR>
 
-    <button>New Estimate</button>
+        </thead>
+        <tbody>
+            <tr>
+                <th>-</th>
+                <th>-</th>
+                <th>-</th>
+                <th>-</th>
+            </tr>
+            <tr>
+                <th>-</th>
+                <th>-</th>
+                <th>-</th>
+                <th>-</th>
+            </tr>
+        </tbody>
+    </table>
+
+    <div class="estimatebutton">
+        <button>New Estimate</button>
+    </div>
+
+    <script src="function.js"></script>
 </body>
-
-
-
 
 </html>
