--- a/Home Page.HTML
+++ b/Home Page.HTML
@@ -1,78 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!--Title of page-->
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Utility Consumption Estimation Tool</title>
+    <title>Utilty_Consumption</title>
+    <link rel="stylesheet" href="Home Page.css">
 </head>
 
-<!--Sign in popup window-->
-<div class="sign_in" id="sign_in">
-    <div class="overlay"></div>
-    <div class="content">
-    </div>
-</div>
-</div>
-<button onclick="Sign_in()">Sign in</button>
-
-
-<!--Body of page-->
 
 <body>
-    <h1><b>American Extrusion</b></h1>
-    <h2><b>Utility Consumption Estimation Tool</b></h2>
+    <form action="Sign In.html">
+        <div class="movesign">
+            <button id="signin">Sign in</button>
+        </div>
+    </form>
 
-    <P>Please select from the following options below</P>
+    <div class="movesign">
+        <button id="signout">Sign Out</button>
+    </div>
 
-    <!--Calculation form-->
-    <form action="/calculate">
-        <P>
-            <label for="">Country</label>
-            <select name="Country" id="Country">
-                <option value="USA">USA</option>
-                <option value="UK">UK</option>
-                <option value="BLANK">BLANK</option>
-                <option value="BLANK">BLANK</option>
-            </select>
+    <div class="movesign">
+        <button id="myaccount">My Account</button>
+    </div>
 
-            <label for="">Machine</label>
-            <select name="machine" id="Machine">
-                <option value="Extuder">Extruder</option>
-                <option value="Oven">Oven</option>
-                <option value="Fryer">Fryer</option>
-                <option value="Melt tank">Melt Tank</option>
-            </select>
+    <h1>American Extrusion</h1>
+    <h2>Utility Consumption Estimator</h2>
 
-            <label for="">Auxiliary</label>
-            <select name="Auxiiliary" id="Auxiliary">
-                <option value="None">None</option>
-                <option value="Conveyor">Conveyor</option>
-                <option value="Fryer">Fryer</option>
-                <option value="Melt tank">Melt Tank</option>
-            </select>
-            <!--Add more machines-->
-            <button type="button">Add</button>
-        </P>
-        <!--Specification table-->
-        <table>
+
+    <p id="selection">
+        <label for="Country">Country</label>
+        <select name="Country" id="Country">
+            <option value="Blank"></option>
+            <option value="USA">USA</option>
+
+        </select>
+
+        <label for="Machine">Machine</label>
+        <select name="Machine" id="Machine">
+            <option value="Blank"></option>
+            <option value="Extruder">Extruder</option>
+
+        </select>
+
+        <label for="Auxiliary">Auxiliary</label>
+        <select name="Auxiliary" id="Auxiliary">
+            <option value="None">None</option>
+            <option value="Conveyor">Conveyor</option>
+
+        </select>
+
+        <button>Add</button>
+    </p>
+
+
+    <div>
+        <table class="estimation">
             <thead>
-                <TR>
+                <tr id="header_row">
                     <th>Machine</th>
                     <th>Voltage</th>
+                    <th>Phases</th>
+                    <th>Frequency (Hz)</th>
                     <th>Amperage</th>
-                    <th>Full Load Amps (FLA)</th>
+                    <th>Full Load Amperage (FLA)</th>
                     <th>Kilowatts (KW)</th>
-                    <th>Kilovolt Amperage (KVA)</th>
-                </TR>
+                    <th>Kilovolts Amperage (KVA)</th>
+                </tr>
             </thead>
+            <tbody>
+                <tr id="data_row">
+                    <th>-</th>
+                    <th>-</th>
+                    <th>-</th>
+                    <th>-</th>
+                    <th>-</th>
+                    <th>-</th>
+                    <th>-</th>
+                    <th>-</th>
+                </tr>
+            </tbody>
         </table>
-        <div><button>Calculate</button></div>
+    </div>
 
-    </form>
+
+
+
+
 
 </body>
 
